forced loading files in utf8